fixed alignment of the images

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   margin: 0;
-  text-align: center;
 }
 
 header h1 {
@@ -26,7 +25,8 @@ h2 {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 3em;
   font-weight: bold;
-  margin: 0;
+  margin: 0em;
+  padding: .1em 0em .1em 0em;
   text-transform: uppercase;
   width: 100%;
 }
@@ -75,6 +75,9 @@ nav li a:hover {
 
 ul {
   list-style-type: none;
+  padding: 1em 0em 1em 0em;
+  margin:0;
+  font-size: 1.2em;
 }
 
 div {
@@ -93,13 +96,15 @@ p {
 }
 
 #joshu-logo {
-  z-index: 2;
-  position: fixed;
   margin-left: 1.5em;
   margin-top: .3em;
+  position: fixed;
+  z-index: 2;
 }
 
 #japanese-logo {
-  float: left;
-  margin-top: .7em;
+}
+
+.body-text {
+  text-align: center
 }
